--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,7 +5,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".MainActivity"
-    android:gravity="center">
+    android:gravity="center"
+    android:orientation="vertical">
 
     <Button
         android:layout_width="wrap_content"
@@ -15,4 +16,14 @@
         android:textSize="30sp"
         android:id="@+id/btnButton"/>
 
+
+
+    <Button
+        android:layout_marginTop="30dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Mo activity 2 su dung bundle"
+        android:textStyle="bold"
+        android:textSize="30sp"
+        android:id="@+id/btnButtonBundle"/>
 </LinearLayout>
